Fix heading alignment and error message wording

--- a/src/components/ShareUrl/ShareUrl.module.css
+++ b/src/components/ShareUrl/ShareUrl.module.css
@@ -4,7 +4,7 @@
   padding: 0.5rem;
   font-size: .8rem;
   flex-basis:3;
-  flex-grow:1;
+  flex-grow:0;
 }
 
 .share_container p {
