--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -20,7 +20,7 @@
   flex-direction: row;
   flex-wrap: nowrap;
   gap: 2rem;
-  justify-content: stretch;
+  justify-content: center;
   align-items: stretch;
   width: 100%;
 }
@@ -28,9 +28,9 @@
 .game_header > h1 {
   display: flex;
   align-items: center;
-  justify-content: flex-end;
-  flex-grow: 1;
-  flex-shrink: 0;
+  justify-content: center;
+  flex-grow: 0;
+  flex-shrink: 1;
   flex-basis: 1;
 }
 
